<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Plum"
    tools:context=".QuintaTela">

    <TextView
        android:layout_width="410dp"
        android:layout_height="100dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/informaoes"
        android:textSize="40sp" />

    <TextView
        android:layout_width="650dp"
        android:layout_height="510dp"
        android:layout_marginTop="120dp"
        android:text="@string/texto"
        android:textSize="17sp" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="640dp"
        android:backgroundTint="@color/Silver"
        android:text="@string/voltar" />

</RelativeLayout>