<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Plum"
    tools:context=".TerceiraTela">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/LightSkyBlue"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_search_off_24" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_invert_colors_24" />

    </LinearLayout>


    <EditText
        android:id="@+id/nome"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:hint="@string/digite_seu_nome_ou_empresa"
        android:inputType="text"
        android:padding="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/telefone"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:padding="20dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="640dp"
        android:backgroundTint="@color/Silver"
        android:text="@string/voltar" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:backgroundTint="@color/LightSkyBlue"
        android:text="@string/enviar"
        android:textSize="20sp" />

</RelativeLayout>






