<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Plum"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/LightSkyBlue"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_search_off_24" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_invert_colors_24" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <TextView
            android:id="@+id/edit_ong"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="1dp"
            android:fontFamily="casual"
            android:padding="16dp"
            android:text="@string/ongs"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/edit_inf"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="1dp"
            android:fontFamily="casual"
            android:padding="15dp"
            android:text="@string/informacoes"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_doe"
        android:layout_width="185dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="175dp"
        android:backgroundTint="@color/LightSkyBlue"
        android:fontFamily="casual"
        android:padding="10dp"
        android:text="@string/doe"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/edit_cad"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/LightSkyBlue"
        android:padding="20dp"
        android:text="@string/cadastre_se"
        android:textColor="@color/white"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/edit_return"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="260dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="@color/Silver"
        android:text="@string/voltar"
        android:textColor="@color/white" />


</LinearLayout>